# fallacysheriff

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  grok_client.py  main.py  rss_client.py  twitter_client.py
data/: .gitkeep
docs/: api-reference.md  deployment.md  setup.md  testing.md
tests/: __init__.py  conftest.py  test_database.py  test_grok.py  test_polling.py  test_rss.py
