[project]
name = "fallacysheriff"
version = "0.2.0"
description = "Twitter bot that identifies logical fallacies in tweets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FallacySheriff Team"}
]
keywords = ["twitter", "bot", "logical-fallacies", "grok", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "tweepy>=4.14.0",
    "openai>=1.58.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fallacysheriff"
Documentation = "https://github.com/yourusername/fallacysheriff/tree/main/docs"
Repository = "https://github.com/yourusername/fallacysheriff"
Issues = "https://github.com/yourusername/fallacysheriff/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
